# pytorch-ssd

./: labelme_to_voc.py  pyproject.toml  rotate_images.py  run_it.sh  run_ssd_example.py
